@startuml

!include astNode.pu
!include definition.pu
!include type.pu
!include statement.pu

class Program
class VarDefinition
class FuncDefinition

ASTNode <|.. Program
ASTNode <|.. Definition
ASTNode <|.. Type

Definition "1..*" <--o Program
Type "1" <--o Definition

Definition <|.. VarDefinition
Definition <|.. FuncDefinition

FuncDefinition o--> "0..*" VarDefinition
FuncDefinition o--> "0..*" Statement

@enduml

